--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #f0f0f0;
+    background-color: #b0d4ec;
 }
 h1 {
-    color: rgb(255,0, 0);
-    font-size: 25px;
-    font-family: 'Segoe UI';
-    background-color: black;
+    color:#DF78ec;
+}
+h2{
+    color: #DF78ec;
 }
 p {
     font-size: large;
@@ -27,11 +27,10 @@ ul li {
     background-color: #dcf539;
     text-align: center;
 }
-
-.enviar{
+.boton{
+    background-color: #46a53e;
     border-radius: 5px;
-    background-color: rgb(0,0,255);
 }
 .etiqueta{
-    background-color: blue;
+    background-color: #dd76f7;
 }
